--- a/public/nSticky1/style.css
+++ b/public/nSticky1/style.css
@@ -39,7 +39,7 @@
 }
 
 .nav-body li a:hover{
-    color: #ff4c29;
+    color: #a841ff; 
 }
 
 .btn{
@@ -47,9 +47,10 @@
     border-radius: 4px;
     outline: navajowhite;
     border: none;
-    color: #fff;
-    background: #ff4c29;
-    cursor: pointer;
+    /* color: #fff; */
+    /* background: #ff4c29;  */
+    /* background: transparent; */
+    /* cursor: pointer; */
 }
 
 .btn:hover{
@@ -60,6 +61,26 @@
     background: #af1d00;
 }
 
+/* .primary */
+ .white-ghost-button {
+    margin-left: 24px;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 2px;
+    border-radius: 45px;
+    padding-left: 20px;
+    padding-right: 20px
+}
+
+ .white-ghost-button:hover {
+    background-color: #fff
+}
+
+ .white-ghost-button:hover a {
+    color: #000
+}
+
+
 .banner{
     background: url(bg.jpg);
     height: 100vh;
@@ -68,10 +89,12 @@
 }
 
 .navbar.sticky{
-    background: #1b1b1b;
+    /* background: #1b1b1b; */
+    background-image: url('../static/img/woods/wood1.jpeg');
     padding: 10px 10px;
 }
 
+/* 
 .navbar.sticky{
     background: #1b1b1b;
-}
+} */
