--- a/public/static/css/new-home.css
+++ b/public/static/css/new-home.css
@@ -17,7 +17,7 @@
 
   }
   .top-text-h{
-    color: brown !important; 
+    color: white !important; 
   }
   .top-text{
     /* color: #a841ff !important;  */
@@ -46,17 +46,17 @@
 
   }   
   
-  
 
 
-.form-small-labels{
+/* .form-small-labels{
   color:black !important; 
   font-size: 11px; 
   line-height: 12px ; 
   padding-left:3px; 
-  /* margin-top: 5px; */
   margin-left: 7px;
-}
+} */
+
+
 /* Full-width input fields */
 input[type=text]{
   width: 100%;
@@ -99,6 +99,36 @@ input[type=text]:focus {
   }  
   }    
 
+  .sell-4-more-p{
+    margin-bottom: 65px;
+  }
+  @media only screen and (max-width: 600px) {
+    .sell-4-more-p{
+      margin-bottom: 65px;
+    }  
+    } 
+    
+    .letschatDiv{
+      height: 45px;
+    }
+    @media only screen and (max-width: 600px) {
+      .letschatDiv{
+        height: 48px;
+        margin-top: -26px;
+      }  
+      }   
+  
+
+    .buildDiv{
+      height: 45px;
+    }
+    @media only screen and (max-width: 600px) {
+      .buildDiv{
+        height: 66px;
+        margin-bottom: 10px;
+      }  
+      }   
+  
 
 .hot-market-container{
   margin-top: 52px;
