stable white nav bar now showing on the home page

--- a/public/static/css/new-home.css
+++ b/public/static/css/new-home.css
@@ -7,6 +7,7 @@
   background-size: cover;
   position: relative;
   border-radius: 0px 0px 20px 20px !important;
+  z-index: -1;
 }
 
 @media only screen and (max-width: 600px) {
