--- a/public/static/css/new-home.css
+++ b/public/static/css/new-home.css
@@ -1,5 +1,4 @@
-
-.bg-imgo{
+.bg-imgo {
   background-image: url("../../static/img/home/houseBg-c.jpg");
   min-height: 650px;
   background-position: center;
@@ -11,31 +10,34 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .bg-imgo{
+  .bg-imgo {
     background-image: url("../../static/img/home/houseBg-c.jpg");
     background-position-x: 64% !important;
     background-position-y: -13px;
 
   }
-  .top-text-h{
-    color: white !important; 
+
+  .top-text-h {
+    color: white !important;
   }
-  .top-text{
+
+  .top-text {
     /* color: #a841ff !important;  */
     color: brown !important;
   }
-  .h-top-btn{
+
+  .h-top-btn {
     margin-top: 180px;
   }
 
-}   
+}
 
-.spacer{
+.spacer {
   margin-bottom: 200px !important;
 }
 
 
-.top-article{
+.top-article {
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 40px;
@@ -43,10 +45,8 @@
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {}
 
-  }   
-  
 
 
 /* .form-small-labels{
@@ -59,7 +59,7 @@
 
 
 /* Full-width input fields */
-input[type=text]{
+input[type=text] {
   width: 100%;
   /* padding: 15px; */
   margin: 5px 0 3px 0;
@@ -80,87 +80,94 @@ input[type=text]:focus {
 
 
 
-.above-sell-for-more{
+.above-sell-for-more {
   /* margin-top: 120px; */
 }
+
 @media only screen and (max-width: 600px) {
-  .above-sell-for-more{
+  .above-sell-for-more {
     /* margin-top:100px; */
-  }  
-  }    
+  }
+}
 
 
-.sell-4-more-container{
+.sell-4-more-container {
   padding-left: 60px;
   margin-top: 65px;
 }
+
 @media only screen and (max-width: 600px) {
-  .sell-4-more-container{
+  .sell-4-more-container {
     padding-left: 17px;
-  }  
-  }    
+  }
+}
 
-  .sell-4-more-p{
+.sell-4-more-p {
+  margin-bottom: 65px;
+  /* padding-right: 83px; */
+}
+
+@media only screen and (max-width: 600px) {
+  .sell-4-more-p {
     margin-bottom: 65px;
-    /* padding-right: 83px; */
   }
-  @media only screen and (max-width: 600px) {
-    .sell-4-more-p{
-      margin-bottom: 65px;
-    }  
-    } 
-    
-    .letschatDiv{
-      height: 45px;
-    }
-    @media only screen and (max-width: 600px) {
-      .letschatDiv{
-        height: 48px;
-        margin-top: -26px;
-      }  
-      }   
-  
+}
 
-    .buildDiv{
-      height: 45px;
-    }
-    @media only screen and (max-width: 600px) {
-      .buildDiv{
-        height: 66px;
-        margin-bottom: 10px;
-      }  
-      }   
+.letschatDiv {
+  height: 45px;
+}
 
-
-  .byYourSide{
-    height: 500px;
+@media only screen and (max-width: 600px) {
+  .letschatDiv {
+    height: 48px;
+    margin-top: -26px;
   }
-  @media only screen and (max-width: 600px) {
-    .byYourSide{
-      height: 400px;
+}
 
-    }  
-    }  
-  .byYourSide-text{
-    padding:100px
-  }
-  @media only screen and (max-width: 600px) {
-    .byYourSide-text{
-      padding:40px
 
-    }  
-    }       
-      
-  
-
-.hot-market-container{
-  margin-top: 52px;
+.buildDiv {
+  height: 45px;
 }
 @media only screen and (max-width: 600px) {
-  .hot-market-container{
-    /* padding-left: 17px; */
-  }  
+  .buildDiv {
+    height: 66px;
+    margin-bottom: 10px;
   }
+}
+
+
+.byYourSide {
+  height: 500px;
+}
+
+@media only screen and (max-width: 600px) {
+  .byYourSide {
+    height: 400px;
+
+  }
+}
+
+.byYourSide-text {
+  padding: 100px
+}
+
+@media only screen and (max-width: 600px) {
+  .byYourSide-text {
+    padding: 40px
+  }
+}
+
+
+
+.hot-market-container {
+  margin-top: 52px;
+}
+
+@media only screen and (max-width: 600px) {
+  .hot-market-container {
+    /* padding-left: 17px; */
+  }
+}
 
 
 /* Set a style for the submit button */
@@ -181,7 +188,7 @@ input[type=text]:focus {
   opacity: 1;
 }
 
-.table-item{
+.table-item {
   font-weight: normal !important;
   font-size: 22px !important;
   height: 62px !important;
@@ -189,51 +196,47 @@ input[type=text]:focus {
   text-align: left;
 }
 
-.heading-msg{
+.heading-msg {
   /* font-size: 64px; */
   font-size: 50px;
   line-height: 76px;
 }
 
 
-.resBtn{
+.resBtn {
   margin-left: 45px !important;
   text-decoration: none;
 }
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-.resBtn{
-  padding-left: 27px !important;
+  .resBtn {
+    padding-left: 27px !important;
 
-}  
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-.resBtn{
-
-}
+  .resBtn {}
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-.resBtn{
-
-}
+  .resBtn {}
 }
 
- .table>:not(:last-child)>:last-child>*{
-  border-bottom-width: 0px; 
-} 
+.table>:not(:last-child)>:last-child>* {
+  border-bottom-width: 0px;
+}
 
-.accordion-button:not(.collapsed){
+.accordion-button:not(.collapsed) {
   /* background-color: wheat; */
   /* background-color: #f4f4f4; */
   background-color: white;
 }
 
-.NoLRPadding{
+.NoLRPadding {
   padding-left: 0px !important;
   padding-right: 0px !important;
   /* margin-left: 0px !important;
@@ -241,5 +244,5 @@ input[type=text]:focus {
   /* background-color: #00AEEF;   */
 
   background-color: #004b7c;
-  
+
 }
