--- a/public/static/nav_style.css
+++ b/public/static/nav_style.css
@@ -151,3 +151,16 @@
     /* margin-left: 15px;  */
     margin-left: 3.5em;
 }
+
+.about-pic {
+        min-height: 600px;
+      }
+      
+      @media only screen and (max-width: 600px) {
+        .about-pic {
+          /* height: 48px;
+          margin-top: -26px; */
+          min-height: 400px;
+        }
+      }
+    
