--- a/public/static/nav_style.css
+++ b/public/static/nav_style.css
@@ -230,6 +230,10 @@
         font-size: 18px;
         font-family: eqsans, Lato, sans-serif;
     }
+    .p-20{
+        font-size: 20px;
+        font-family: eqsans, Lato, sans-serif;
+    }
 
 
     .trail {
