--- a/public/static/nav_style.css
+++ b/public/static/nav_style.css
@@ -311,5 +311,31 @@
     }
 
 
+    /* paul page start  */
+.nostyle-list{
 
+}
+.paul-bg{
+    background-color: white;
+    border-radius: 25px;
+    background-image: url(../../static/img/woods/7.webp);
+    color: #ffffff;
+    padding: 30px 10px 30px 20px;
+    /* padding: 30px; */
+    margin-bottom: 30px;
+    width: 315px;
+    min-height: 500px;
+}
+
+  .paul-li:nth-of-type(1){
+    margin-bottom: 50px;
+} 
+
+.paul-li{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: white;
+}
   
+
+/* paul page end  */
