--- a/public/static/nav_style.css
+++ b/public/static/nav_style.css
@@ -311,6 +311,48 @@
     }
 
 
+
+
+    /* loader start */
+    .preloader {
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;      
+  /* Great working */
+        background-color: #a55c1b;
+        background-image: linear-gradient(315deg, #a55c1b 0%, #000000 74%);
+        text-align: center;
+        z-index: 9999999
+    }
+  
+    .preloader .spinner {
+        width: 139px;
+        height: 49px;
+        text-align: center;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto
+    }
+  
+    .loader-logo {
+        float: left
+    }
+  
+    .loader-logo img {
+        width: 139px;
+        height: auto
+    }
+    /* loader end */
+
+
+
+
+
     /* paul page start  */
 .nostyle-list{
 
