--- a/public/abtest/old.css
+++ b/public/abtest/old.css
@@ -21,15 +21,6 @@
 @supports ((-webkit-mask-image:none) or (mask-image:none)) or (-webkit-mask-image:none) {
 }
 
-.has-drop-cap:not(:focus):first-letter {
-  float: left;
-  font-size: 8.4em;
-  line-height: .68;
-  font-weight: 100;
-  margin: .05em .1em 0 0;
-  text-transform: uppercase;
-  font-style: normal
-}
 
 @supports ((position:-webkit-sticky) or (position:sticky)) {
 }
@@ -108,205 +99,8 @@ a:hover {
     outline-width: 0
 }
 
-abbr[title] {
-    border-bottom: none;
-    text-decoration: underline;
-    text-decoration: underline dotted
-}
 
-b,
-strong {
-    font-weight: inherit
-}
 
-b,
-strong {
-    font-weight: bolder
-}
-
-code,
-kbd,
-samp {
-    font-family: monospace, monospace;
-    font-size: 1em
-}
-
-dfn {
-    font-style: italic
-}
-
-mark {
-    background-color: #ff0;
-    color: #000
-}
-
-small {
-    font-size: 80%
-}
-
-sub,
-sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline
-}
-
-sub {
-    bottom: -.25em
-}
-
-sup {
-    top: -.5em
-}
-
-audio,
-video {
-    display: inline-block
-}
-
-audio:not([controls]) {
-    display: none;
-    height: 0
-}
-
-img {
-    border-style: none
-}
-
-svg:not(:root) {
-    overflow: hidden
-}
-
-button,
-input,
-optgroup,
-select,
-textarea {
-    font-family: sans-serif;
-    font-size: 100%;
-    line-height: 1.15;
-    margin: 0
-}
-
-button {
-    overflow: visible
-}
-
-button,
-select {
-    text-transform: none
-}
-
-[type=reset],
-[type=submit],
-button,
-html [type=button] {
-    -webkit-appearance: button
-}
-
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner,
-button::-moz-focus-inner {
-    border-style: none;
-    padding: 0
-}
-
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring,
-button:-moz-focusring {
-    outline: 1px dotted ButtonText
-}
-
-input {
-    overflow: visible
-}
-
-[type=checkbox],
-[type=radio] {
-    box-sizing: border-box;
-    padding: 0
-}
-
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
-    height: auto
-}
-
-[type=search] {
-    -webkit-appearance: textfield;
-    outline-offset: -2px
-}
-
-[type=search]::-webkit-search-cancel-button,
-[type=search]::-webkit-search-decoration {
-    -webkit-appearance: none
-}
-
-::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    font: inherit
-}
-
-fieldset {
-    border: 1px solid silver;
-    margin: 0 2px;
-    padding: .35em .625em .75em
-}
-
-legend {
-    box-sizing: border-box;
-    display: table;
-    max-width: 100%;
-    padding: 0;
-    color: inherit;
-    white-space: normal
-}
-
-/* progress {
-    display: inline-block;
-    vertical-align: baseline
-} */
-/* 
-textarea {
-    overflow: auto
-} */
-/* 
-details {
-    display: block
-}
-
-summary {
-    display: list-item
-} */
-
-menu {
-    display: block
-}
-
-canvas {
-    display: inline-block
-}
-
-template {
-    display: none
-}
-
-[hidden] {
-    display: none
-}
-
-/* dev ? */
-.foundation-mq {
-    font-family: "small=0em&medium=40em&large=64em&xlarge=75em&xxlarge=90em"
-}
-
-html {
-    box-sizing: border-box;
-    font-size: 100%
-}
 
 *,
 ::after,
@@ -326,36 +120,15 @@ body {
     -moz-osx-font-smoothing: grayscale
 }
 
-img {
+/* img {
     display: inline-block;
     vertical-align: middle;
     max-width: 100%;
     height: auto;
     -ms-interpolation-mode: bicubic
-}
-
-/* textarea {
-    height: auto;
-    min-height: 50px;
-    border-radius: 0
-}
-
-select {
-    box-sizing: border-box;
-    width: 100%;
-    border-radius: 0
 } */
 
-/* dev ? */
-/* 
-.map_canvas embed,
-.map_canvas img,
-.map_canvas object,
-.mqa-display embed,
-.mqa-display img,
-.mqa-display object {
-    max-width: none !important
-} */
+
 
 button {
     padding: 0;
@@ -373,484 +146,11 @@ button {
     outline: 0
 }
 
-/* pre {
-    overflow: auto
-} */
 
-
-/* input,
-optgroup,
-select, */
-/* textarea */
 button{
     font-family: inherit
 }
 
-/* .is-visible {
-    display: block !important
-}
-
-.is-hidden {
-    display: none !important
-} */
-
-
-.grid-margin-y {
-    margin-top: -.625rem;
-    margin-bottom: -.625rem
-}
-
-@media print,
-screen and (min-width:40em) {
-    .grid-margin-y {
-        margin-top: -.9375rem;
-        margin-bottom: -.9375rem
-    }
-}
-
-.grid-margin-y>.cell {
-    height: calc(100% - 1.25rem);
-    margin-top: .625rem;
-    margin-bottom: .625rem
-}
-
-@media print,
-screen and (min-width:40em) {
-    .grid-margin-y>.cell {
-        height: calc(100% - 1.875rem);
-        margin-top: .9375rem;
-        margin-bottom: .9375rem
-    }
-}
-
-.grid-margin-y>.auto {
-    height: auto
-}
-
-.grid-margin-y>.shrink {
-    height: auto
-}
-
-.grid-margin-y>.small-1 {
-    height: calc(8.33333% - 1.25rem)
-}
-
-.grid-margin-y>.small-2 {
-    height: calc(16.66667% - 1.25rem)
-}
-
-.grid-margin-y>.small-3 {
-    height: calc(25% - 1.25rem)
-}
-
-.grid-margin-y>.small-4 {
-    height: calc(33.33333% - 1.25rem)
-}
-
-.grid-margin-y>.small-5 {
-    height: calc(41.66667% - 1.25rem)
-}
-
-.grid-margin-y>.small-6 {
-    height: calc(50% - 1.25rem)
-}
-
-.grid-margin-y>.small-7 {
-    height: calc(58.33333% - 1.25rem)
-}
-
-.grid-margin-y>.small-8 {
-    height: calc(66.66667% - 1.25rem)
-}
-
-.grid-margin-y>.small-9 {
-    height: calc(75% - 1.25rem)
-}
-
-.grid-margin-y>.small-10 {
-    height: calc(83.33333% - 1.25rem)
-}
-
-.grid-margin-y>.small-11 {
-    height: calc(91.66667% - 1.25rem)
-}
-
-.grid-margin-y>.small-12 {
-    height: calc(100% - 1.25rem)
-}
-
-@media print,
-screen and (min-width:40em) {
-    .grid-margin-y>.auto {
-        height: auto
-    }
-
-    .grid-margin-y>.shrink {
-        height: auto
-    }
-
-    .grid-margin-y>.small-1 {
-        height: calc(8.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-2 {
-        height: calc(16.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-3 {
-        height: calc(25% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-4 {
-        height: calc(33.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-5 {
-        height: calc(41.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-6 {
-        height: calc(50% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-7 {
-        height: calc(58.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-8 {
-        height: calc(66.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-9 {
-        height: calc(75% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-10 {
-        height: calc(83.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-11 {
-        height: calc(91.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.small-12 {
-        height: calc(100% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-auto {
-        height: auto
-    }
-
-    .grid-margin-y>.medium-shrink {
-        height: auto
-    }
-
-    .grid-margin-y>.medium-1 {
-        height: calc(8.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-2 {
-        height: calc(16.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-3 {
-        height: calc(25% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-4 {
-        height: calc(33.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-5 {
-        height: calc(41.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-6 {
-        height: calc(50% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-7 {
-        height: calc(58.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-8 {
-        height: calc(66.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-9 {
-        height: calc(75% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-10 {
-        height: calc(83.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-11 {
-        height: calc(91.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.medium-12 {
-        height: calc(100% - 1.875rem)
-    }
-}
-
-@media print,
-screen and (min-width:64em) {
-    .grid-margin-y>.large-auto {
-        height: auto
-    }
-
-    .grid-margin-y>.large-shrink {
-        height: auto
-    }
-
-    .grid-margin-y>.large-1 {
-        height: calc(8.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-2 {
-        height: calc(16.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-3 {
-        height: calc(25% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-4 {
-        height: calc(33.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-5 {
-        height: calc(41.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-6 {
-        height: calc(50% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-7 {
-        height: calc(58.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-8 {
-        height: calc(66.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-9 {
-        height: calc(75% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-10 {
-        height: calc(83.33333% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-11 {
-        height: calc(91.66667% - 1.875rem)
-    }
-
-    .grid-margin-y>.large-12 {
-        height: calc(100% - 1.875rem)
-    }
-}
-
-.grid-frame.grid-margin-y {
-    height: calc(100vh + 1.25rem)
-}
-
-@media print,
-screen and (min-width:40em) {
-    .grid-frame.grid-margin-y {
-        height: calc(100vh + 1.875rem)
-    }
-}
-
-@media print,
-screen and (min-width:64em) {
-    .grid-frame.grid-margin-y {
-        height: calc(100vh + 1.875rem)
-    }
-}
-
-@media print,
-screen and (min-width:40em) {
-    .grid-margin-y.medium-grid-frame {
-        height: calc(100vh + 1.875rem)
-    }
-}
-
-@media print,
-screen and (min-width:64em) {
-    .grid-margin-y.large-grid-frame {
-        height: calc(100vh + 1.875rem)
-    }
-}
-
-blockquote,
-dd,
-div,
-dl,
-dt,
-form,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-li,
-ol,
-p,
-pre,
-td,
-th,
-ul {
-    margin: 0;
-    padding: 0
-}
-
-p {
-    margin-bottom: 1rem;
-    /* font-size: inherit; */
-    /* dev */
-    font-size: 20px;
-    /* line-height: 1.6; */
-    line-height: 2.0;
-    text-rendering: optimizeLegibility
-}
-
-em,
-i {
-    font-style: italic;
-    line-height: inherit
-}
-
-b,
-strong {
-    font-weight: 700;
-    line-height: inherit
-}
-
-small {
-    font-size: 80%;
-    line-height: inherit
-}
-
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: eqsans, Lato, sans-serif, "Libre Baskerville", serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    color: inherit;
-    text-rendering: optimizeLegibility
-}
-
-.h1 small,
-.h2 small,
-.h3 small,
-.h4 small,
-.h5 small,
-.h6 small,
-h1 small,
-h2 small,
-h3 small,
-h4 small,
-h5 small,
-h6 small {
-    line-height: 0;
-    color: #cacaca
-}
-
-.h1,
-h1 {
-    font-size: 1.5rem;
-    line-height: 1.4;
-    margin-top: 0;
-    margin-bottom: .5rem
-}
-
-.h2,
-h2 {
-    font-size: 1.25rem;
-    line-height: 1.4;
-    margin-top: 0;
-    margin-bottom: .5rem
-}
-
-.h3,
-h3 {
-    font-size: 1.1875rem;
-    line-height: 1.4;
-    margin-top: 0;
-    margin-bottom: .5rem
-}
-
-.h4,
-h4 {
-    font-size: 1.125rem;
-    line-height: 1.4;
-    margin-top: 0;
-    margin-bottom: .5rem
-}
-
-.h5,
-h5 {
-    font-size: 1.0625rem;
-    line-height: 1.4;
-    margin-top: 0;
-    margin-bottom: .5rem
-}
-
-.h6,
-h6 {
-    font-size: 1rem;
-    line-height: 1.4;
-    margin-top: 0;
-    margin-bottom: .5rem
-}
-
-@media print,
-screen and (min-width:40em) {
-
-    .h1,
-    h1 {
-        font-size: 3rem
-    }
-
-    .h2,
-    h2 {
-        font-size: 2.5rem
-    }
-
-    .h3,
-    h3 {
-        font-size: 1.9375rem
-    }
-
-    .h4,
-    h4 {
-        font-size: 1.5625rem
-    }
-
-    .h5,
-    h5 {
-        font-size: 1.25rem
-    }
-
-    .h6,
-    h6 {
-        font-size: 1rem
-    }
-}
 
 a {
     line-height: inherit;
@@ -881,41 +181,7 @@ hr {
 
 dl,
 ol,
-ul {
-    margin-bottom: 1rem;
-    list-style-position: outside;
-    line-height: 1.6
-}
 
-li {
-    font-size: inherit
-}
-
-ul {
-    margin-left: 1.25rem;
-    list-style-type: disc
-}
-
-ol {
-    margin-left: 1.25rem
-}
-
-ol ol,
-ol ul,
-ul ol,
-ul ul {
-    margin-left: 1.25rem;
-    margin-bottom: 0
-}
-
-dl {
-    margin-bottom: 1rem
-}
-
-dl dt {
-    margin-bottom: .3rem;
-    font-weight: 700
-}
 
 blockquote {
     margin: 0 0 1rem;
@@ -1200,219 +466,7 @@ select[multiple] {
     border: 0
 }
 
-.breadcrumbs::after,
-.breadcrumbs::before {
-    display: table;
-    content: ' ';
-    -webkit-flex-basis: 0;
-    -ms-flex-preferred-size: 0;
-    flex-basis: 0;
-    -webkit-order: 1;
-    -ms-flex-order: 1;
-    order: 1
-}
 
-.breadcrumbs::after {
-    clear: both
-}
-
-.breadcrumbs li {
-    float: left;
-    font-size: .6875rem;
-    color: #0a0a0a;
-    cursor: default;
-    text-transform: uppercase
-}
-
-.breadcrumbs li:not(:last-child)::after {
-    position: relative;
-    margin: 0 .75rem;
-    opacity: 1;
-    content: "/";
-    color: #cacaca
-}
-
-.breadcrumbs a {
-    color: #a841ff
-}
-
-.breadcrumbs a:hover {
-    text-decoration: underline
-}
-
-.breadcrumbs .disabled {
-    color: #cacaca;
-    cursor: not-allowed
-}
-
-.button-group {
-    margin-bottom: 1rem;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-align-items: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch
-}
-
-.button-group::after,
-.button-group::before {
-    display: table;
-    content: ' ';
-    -webkit-flex-basis: 0;
-    -ms-flex-preferred-size: 0;
-    flex-basis: 0;
-    -webkit-order: 1;
-    -ms-flex-order: 1;
-    order: 1
-}
-
-.button-group::after {
-    clear: both
-}
-
-.button-group .button {
-    margin: 0;
-    margin-right: 1px;
-    margin-bottom: 1px;
-    font-size: .9rem;
-    -webkit-flex: 0 0 auto;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto
-}
-
-.button-group .button:last-child {
-    margin-right: 0
-}
-
-.button-group.tiny .button {
-    font-size: .6rem
-}
-
-.button-group.small .button {
-    font-size: .75rem
-}
-
-.button-group.large .button {
-    font-size: 1.25rem
-}
-
-.button-group.expanded .button {
-    -webkit-flex: 1 1 0px;
-    -ms-flex: 1 1 0px;
-    flex: 1 1 0px
-}
-
-.button-group.primary .button {
-    background-color: #a841ff;
-    color: #0a0a0a
-}
-
-.button-group.primary .button:focus,
-.button-group.primary .button:hover {
-    background-color: #8b01ff;
-    color: #0a0a0a
-}
-
-.button-group.secondary .button {
-    background-color: #767676;
-    color: #fefefe
-}
-
-.button-group.secondary .button:focus,
-.button-group.secondary .button:hover {
-    background-color: #5e5e5e;
-    color: #fefefe
-}
-
-.button-group.success .button {
-    background-color: #3adb76;
-    color: #0a0a0a
-}
-
-.button-group.success .button:focus,
-.button-group.success .button:hover {
-    background-color: #22bb5b;
-    color: #0a0a0a
-}
-
-.button-group.warning .button {
-    background-color: #ffae00;
-    color: #0a0a0a
-}
-
-.button-group.warning .button:focus,
-.button-group.warning .button:hover {
-    background-color: #cc8b00;
-    color: #0a0a0a
-}
-
-.button-group.alert .button {
-    background-color: #cc4b37;
-    color: #fefefe
-}
-
-.button-group.alert .button:focus,
-.button-group.alert .button:hover {
-    background-color: #a53b2a;
-    color: #fefefe
-}
-
-.button-group.stacked,
-.button-group.stacked-for-medium,
-.button-group.stacked-for-small {
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap
-}
-
-.button-group.stacked .button,
-.button-group.stacked-for-medium .button,
-.button-group.stacked-for-small .button {
-    -webkit-flex: 0 0 100%;
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%
-}
-
-.button-group.stacked .button:last-child,
-.button-group.stacked-for-medium .button:last-child,
-.button-group.stacked-for-small .button:last-child {
-    margin-bottom: 0
-}
-
-@media print,
-screen and (min-width:40em) {
-    .button-group.stacked-for-small .button {
-        -webkit-flex: 1 1 0px;
-        -ms-flex: 1 1 0px;
-        flex: 1 1 0px;
-        margin-bottom: 0
-    }
-}
-
-@media print,
-screen and (min-width:64em) {
-    .button-group.stacked-for-medium .button {
-        -webkit-flex: 1 1 0px;
-        -ms-flex: 1 1 0px;
-        flex: 1 1 0px;
-        margin-bottom: 0
-    }
-}
-
-@media screen and (max-width:39.9375em) {
-    .button-group.stacked-for-small.expanded {
-        display: block
-    }
-
-    .button-group.stacked-for-small.expanded .button {
-        display: block;
-        margin-right: 0
-    }
-}
 
 
 
