--- a/public/abtest/old.css
+++ b/public/abtest/old.css
@@ -73,7 +73,7 @@ h1 {
     font-size: 2em;
     margin: .67em 0
 }
-
+/* 
 figcaption,
 figure {
     display: block
@@ -81,23 +81,25 @@ figure {
 
 figure {
     margin: 1em 40px
-}
+} 
 
 hr {
     box-sizing: content-box;
     height: 0;
     overflow: visible
 }
+*/
 
 main {
     display: block
 }
 
-pre {
+/* pre {
     font-family: monospace, monospace;
     font-size: 1em
-}
+} */
 
+/* 
 a {
     background-color: transparent;
     -webkit-text-decoration-skip: objects
@@ -106,7 +108,7 @@ a {
 a:active,
 a:hover {
     outline-width: 0
-}
+} */
 
 /* abbr[title] {
     border-bottom: none;
@@ -293,7 +295,7 @@ body {
 
 
 
-button {
+/* button {
     padding: 0;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -311,7 +313,7 @@ button {
 
 button{
     font-family: inherit
-}
+} */
 
 
 
@@ -331,7 +333,7 @@ a img {
     border: 0
 }
 
-hr {
+/* hr {
     clear: both;
     max-width: 90rem;
     height: 0;
@@ -340,13 +342,13 @@ hr {
     border-right: 0;
     border-bottom: 1px solid #cacaca;
     border-left: 0
-}
+} */
 
 /* dl,
 ol,
  */
 
-.has-submenu-toggle>a {
+/* .has-submenu-toggle>a {
     margin-right: 40px
 }
 
@@ -393,7 +395,7 @@ ol,
     -webkit-clip-path: inset(50%);
     clip-path: inset(50%);
     border: 0
-}
+} */
 
 /* ?? */
 
@@ -762,7 +764,8 @@ screen and (min-width:64em) {
  
 /* ?? */
 
-.dropdown-pane {
+
+/* .dropdown-pane {
     position: absolute;
     z-index: 10;
     width: 300px;
@@ -1140,7 +1143,7 @@ screen and (min-width:64em) {
 
 .is-dropdown-submenu.js-dropdown-active {
     display: block
-}
+} */
 
 /* nav ends */
 
@@ -1148,13 +1151,13 @@ screen and (min-width:64em) {
 /* below is imp for nav */
 
 
-.hide {
+/* .hide {
     display: none !important
 }
 
 .invisible {
     visibility: hidden
-}
+} */
 
 @media screen and (max-width:39.9375em) {
     .hide-for-small-only {
@@ -1222,7 +1225,170 @@ screen and (min-width:75em) {
 }
 
 
-/* .main-grid {
+.align-right {
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end
+}
+
+.align-center {
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center
+}
+
+.align-justify {
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between
+}
+
+.align-spaced {
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+    justify-content: space-around
+}
+
+.align-right.vertical.menu>li>a {
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end
+}
+
+.align-center.vertical.menu>li>a {
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center
+}
+
+.align-top {
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start
+}
+
+.align-self-top {
+    -webkit-align-self: flex-start;
+    -ms-flex-item-align: start;
+    align-self: flex-start
+}
+
+.align-bottom {
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end
+}
+
+.align-self-bottom {
+    -webkit-align-self: flex-end;
+    -ms-flex-item-align: end;
+    align-self: flex-end
+}
+
+.align-middle {
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center
+}
+
+.align-self-middle {
+    -webkit-align-self: center;
+    -ms-flex-item-align: center;
+    -ms-grid-row-align: center;
+    align-self: center
+}
+
+.align-stretch {
+    -webkit-align-items: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch
+}
+
+.align-self-stretch {
+    -webkit-align-self: stretch;
+    -ms-flex-item-align: stretch;
+    -ms-grid-row-align: stretch;
+    align-self: stretch
+}
+
+.align-center-middle {
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center
+}
+
+
+.flex-container {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex
+}
+
+.flex-child-auto {
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto
+}
+
+.flex-child-grow {
+    -webkit-flex: 1 0 auto;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto
+}
+
+.flex-child-shrink {
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto
+}
+
+.flex-dir-row {
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row
+}
+
+.flex-dir-row-reverse {
+    -webkit-flex-direction: row-reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse
+}
+
+.flex-dir-column {
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column
+}
+
+.flex-dir-column-reverse {
+    -webkit-flex-direction: column-reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse
+}
+
+
+.main-container {
+    padding-right: .625rem;
+    padding-left: .625rem;
+    max-width: 90rem;
+    margin: 0 auto
+}
+
+@media print,
+screen and (min-width:40em) {
+    .main-container {
+        padding-right: .9375rem;
+        padding-left: .9375rem
+    }
+}
+
+.main-grid {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
@@ -1237,10 +1403,55 @@ screen and (min-width:40em) {
     .main-grid {
         margin-top: 3rem
     }
-} */
+}
 
+.main-grid.sidebar-left .main-content {
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1
+}
 
+.main-grid.sidebar-left .sidebar {
+    -webkit-order: 2;
+    -ms-flex-order: 2;
+    order: 2
+}
 
+@media print,
+screen and (min-width:40em) {
+    .main-grid.sidebar-left .main-content {
+        -webkit-order: 2;
+        -ms-flex-order: 2;
+        order: 2
+    }
+
+    .main-grid.sidebar-left .sidebar {
+        -webkit-order: 1;
+        -ms-flex-order: 1;
+        order: 1
+    }
+}
+
+.main-grid .main-content-full-width {
+    width: calc(100% - 1.875rem);
+    margin-right: .9375rem;
+    margin-left: .9375rem
+}
+
+.main-grid .main-content {
+    width: calc(100% - 1.25rem);
+    margin-right: .625rem;
+    margin-left: .625rem
+}
+
+@media print,
+screen and (min-width:40em) {
+    .main-grid .main-content {
+        width: calc(66.66667% - 1.875rem);
+        margin-right: .9375rem;
+        margin-left: .9375rem
+    }
+}
 
 
 
@@ -1980,7 +2191,7 @@ header .mobile-primary-menu {
 }
 
 .white-button:after {
-    background-image: url(../images/arrow-right-purple.svg)
+    background-image: url(../static/icons/arrow-right-purple.svg)
 }
 
 .colour-button {
@@ -2006,27 +2217,7 @@ header .mobile-primary-menu {
 }
 
 .white-ghost-button:hover:after {
-    background-image: url(../images/arrow-right-purple.svg)
+    background-image: url(../static/icons/arrow-right-purple.svg)
 }
-
-
-
-.contained-hero .background-color-block {
-    height: 450px;
-    background-color: #292929;
-    padding-top: 92px
-}
-
-.contained-hero .main-content {
-    margin-top: -300px;
-    margin-bottom: -4em
-}
-
-.cta-section .button {
-    display: inline-block;
-    margin: auto;
-    min-width: 300px
-}
-
 
 
