--- a/public/static/nav_style.css
+++ b/public/static/nav_style.css
@@ -16,7 +16,7 @@
     font-family: 'eqsans', sans-serif;
 }
 
-.navbar{
+/* .navbar{
     background: transparent;
     display: flex;
     align-items: center;
@@ -56,10 +56,6 @@
     border-radius: 4px;
     outline: navajowhite;
     border: none;
-    /* color: #fff; */
-    /* background: #ff4c29;  */
-    /* background: transparent; */
-    /* cursor: pointer; */
 }
 
 .btn:hover{
@@ -68,7 +64,7 @@
 
 .btn:active{
     background: #af1d00;
-}
+} */
 
 /* nav hover start*/
 /* on hover show subs working.  */
@@ -84,7 +80,6 @@
 
 
 
-/* .primary */
  .white-ghost-button {
     margin-left: 24px;
     text-transform: uppercase;
@@ -94,6 +89,7 @@
     padding-left: 20px;
     padding-right: 20px
 }
+
 
 .purpleColor{
     color: #a841ff;
@@ -161,14 +157,13 @@
     background-size: cover;
 }
 
-.navbar.sticky{
-    /* background: #1b1b1b; */
+/* .navbar.sticky{
     background-image: url('../static/img/woods/wood1.jpeg');
     padding: 10px 10px;
     z-index: 1;
-}
+} */
 
-.dropdown-menu {
+/* .dropdown-menu {
     background-image: url('../static/img/woods/wood1.jpeg');
     padding: 10px 10px;
     color: white;
@@ -182,9 +177,9 @@
     color: white;
 }
 .nav-item{
-    /* margin-left: 15px;  */
+
     margin-left: 3.5em;
-}
+} */
 
 .about-pic {
         min-height: 600px;
